# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
src/: config.py  main.py
src/game/: clock.py  event_handler.py  event_queue.py  game_logic.py  game_loop.py
src/repositories/: score_repository.py
src/tests/: button_event_calls_test.py  event_handler_test.py  game_logic_test.py  game_loop_test.py  score_repository_test.py
src/ui/: button.py  high_scores_screen.py  info_screen.py  lose_screen.py  popup_screen.py  render.py  win_screen.py
src/ui/common/: button.py  label.py
src/ui/screens/: high_scores_screen.py  info_screen.py  lose_screen.py  popup_screen.py  win_screen.py
